<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/swim_imv"
        android:layout_width="50dp"
        android:layout_height="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/swim"/>

    <TextView
        android:id="@+id/date_performance_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_performance"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/swim_imv"
        android:gravity="center"/>
    <TextView
        android:id="@+id/duration_performance_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="30dp"
        android:text="@string/duration_performance"
        app:layout_constraintLeft_toRightOf="@id/date_performance_tv"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"/>

    <TextView
        android:id="@+id/speed_performance_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="60dp"
        android:text="@string/speed_performance"
        app:layout_constraintTop_toBottomOf="@id/swim_imv"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/distance_performance_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/distance_performance"
        android:layout_marginLeft="90dp"
        app:layout_constraintTop_toBottomOf="@id/swim_imv"
        app:layout_constraintLeft_toRightOf="@id/speed_performance_tv"/>

</android.support.constraint.ConstraintLayout>