<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:text="@string/title_card_1"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textSize="18sp"
                android:textColor="@color/blueWaves"
                android:layout_marginTop="20dp"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/yoga"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/text_card_1"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/cercle_vertueux_sport"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/text2_card_1"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_ok_readed"
                style="@style/AppTheme.RoundedCornerMaterialButton2"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:text="OK ツ"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>