<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                card_view:cardBackgroundColor="#fff"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="6dp"
                card_view:cardUseCompatPadding="true"
                android:layout_marginTop="60dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/img_prog1"
                        android:layout_width="500dp"
                        android:layout_height="220dp"
                        android:src="@drawable/winterbody"
                        android:scaleType="centerInside"/>

                    <TextView
                        android:id="@+id/title_prog1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/program_title_winter"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:layout_marginTop="20dp"/>

                    <TextView
                        android:id="@+id/desc_prog1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:lines="3"
                        android:maxLines="3"
                        android:text="@string/program_desc_winter"
                        android:textColor="#737078"
                        android:textSize="14dp"/>

                    <Button
                        android:id="@+id/btn_progWinter"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:background="@color/blueWaves"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:text="GO !"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                card_view:cardBackgroundColor="#fff"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="6dp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/img_prog2"
                        android:layout_width="500dp"
                        android:layout_height="250dp"
                        android:src="@drawable/springbody2"
                        android:scaleType="centerInside"/>

                    <TextView
                        android:id="@+id/title_prog2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/program_title_spring"
                        android:textColor="#000"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/desc_prog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:lines="3"
                        android:maxLines="3"
                        android:text="@string/program_desc_spring"
                        android:textColor="#737078"
                        android:textSize="14dp"/>

                    <Button
                        android:id="@+id/btn_progSpring"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:background="@color/colorAccent"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:text="GO !"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                card_view:cardBackgroundColor="#fff"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="6dp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/img_prog3"
                        android:layout_width="500dp"
                        android:layout_height="220dp"
                        android:src="@drawable/summerboby"
                        android:scaleType="centerInside"/>

                    <TextView
                        android:id="@+id/title_prog3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/program_title_summer"
                        android:textColor="#000"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/desc_prog3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:lines="3"
                        android:maxLines="3"
                        android:text="@string/program_desc_summer"
                        android:textColor="#737078"
                        android:textSize="14dp"/>

                    <Button
                        android:id="@+id/btn_progSummer"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:background="@color/orange"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:text="GO !"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <include
        layout="@layout/app_bar_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_menu"
        app:menu="@menu/activity_menu_drawer" />

</android.support.v4.widget.DrawerLayout>